Modernize one iota